feat: add incremental program profile lineage