@@ -1,7 +1,9 @@
 package io.onsure.platform;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
@@ -40,9 +42,13 @@ public final class ProgramLearningService {
         if (!Files.isDirectory(root, LinkOption.NOFOLLOW_LINKS) || Files.isSymbolicLink(root)) {
             throw new IllegalArgumentException("PROGRAM_SOURCE_ROOT_INVALID");
         }
+        Path output = outputFile.toAbsolutePath().normalize();
+        ParentProfile parent = readParentProfile(output, projectId, programId);
         List<Path> sourceFiles = Hashing.sourceFiles(root);
         if (sourceFiles.isEmpty()) throw new IllegalStateException("PROGRAM_SOURCE_SET_EMPTY");
         String sourceDigest = Hashing.tree(root);
+        List<Map<String, Object>> sourceInventory = sourceInventory(root, sourceFiles);
+        Map<String, Object> changeSet = changeSet(parent, sourceInventory);
         Map<String, Object> baseline = sourceBaseline(root, sourceDigest, sourceFiles.size());
         Map<String, Integer> languages = languageInventory(sourceFiles);
         List<Map<String, Object>> components = components(root, sourceFiles);
@@ -63,13 +69,17 @@ public final class ProgramLearningService {
                 && Files.isRegularFile(root.resolve("yarn.lock"))) {
             conflicts.add("MULTIPLE_NODE_LOCKFILES");
         }
-        String profileId = "PROFILE-" + sourceDigest.substring(0, 16);
+        int revision = parent == null ? 1 : parent.revision() + 1;
+        String profileId = "PROFILE-" + sourceDigest.substring(0, 16) + "-R" + revision;
         Map<String, Object> profile = new LinkedHashMap<>();
         profile.put("contract", CONTRACT);
         profile.put("profile_id", profileId);
         profile.put("project_id", projectId);
         profile.put("program_id", programId);
         profile.put("source_baseline", baseline);
+        profile.put("source_inventory", sourceInventory);
+        profile.put("parent_profile", parent == null ? null : parent.reference());
+        profile.put("change_set", changeSet);
         profile.put("purpose", purpose(root));
         profile.put("components", List.copyOf(components));
         profile.put("dependencies", List.copyOf(dependencies));
@@ -80,7 +90,7 @@ public final class ProgramLearningService {
         profile.put("evidence_refs", List.of(
                 "source-tree:sha256:" + sourceDigest,
                 "source-set-count:" + sourceFiles.size()));
-        profile.put("revision", 1);
+        profile.put("revision", revision);
         profile.put("state", "PROFILE_CANDIDATE");
         profile.put("generated_at", Instant.now().toString());
         profile.put("learning_method", "STATIC_REPOSITORY_UNDERSTANDING_V2");
@@ -91,8 +101,111 @@ public final class ProgramLearningService {
         profile.put("independent_validation", "NOT_RUN");
         profile.put("final_claim_allowed", false);
         profile.put("profile_sha256", sha256(mapper.writeValueAsBytes(profile)));
-        writeAtomic(outputFile, profile);
-        return Map.copyOf(profile);
+        writeAtomic(output, profile);
+        return java.util.Collections.unmodifiableMap(new LinkedHashMap<>(profile));
+    }
+
+    private List<Map<String, Object>> sourceInventory(Path root, List<Path> sourceFiles) throws Exception {
+        List<Map<String, Object>> inventory = new ArrayList<>();
+        for (Path file : sourceFiles) {
+            inventory.add(Map.of(
+                    "path", Hashing.relative(root, file),
+                    "sha256", Hashing.file(file)));
+        }
+        inventory.sort(Comparator.comparing(item -> item.get("path").toString()));
+        return List.copyOf(inventory);
+    }
+
+    private Map<String, Object> changeSet(
+            ParentProfile parent, List<Map<String, Object>> currentInventory) {
+        Map<String, String> current = inventoryIndex(currentInventory, "CURRENT_SOURCE_INVENTORY_INVALID");
+        if (parent == null) {
+            return Map.of(
+                    "mode", "FULL",
+                    "added", List.copyOf(current.keySet()),
+                    "modified", List.of(),
+                    "deleted", List.of(),
+                    "unchanged", List.of(),
+                    "compared_file_count", 0);
+        }
+        Map<String, String> previous = parent.inventory();
+        List<String> added = current.keySet().stream().filter(path -> !previous.containsKey(path)).toList();
+        List<String> modified = current.keySet().stream()
+                .filter(previous::containsKey)
+                .filter(path -> !current.get(path).equals(previous.get(path))).toList();
+        List<String> deleted = previous.keySet().stream().filter(path -> !current.containsKey(path)).toList();
+        List<String> unchanged = current.keySet().stream()
+                .filter(previous::containsKey)
+                .filter(path -> current.get(path).equals(previous.get(path))).toList();
+        Map<String, Object> result = new LinkedHashMap<>();
+        result.put("mode", "INCREMENTAL");
+        result.put("added", added);
+        result.put("modified", modified);
+        result.put("deleted", deleted);
+        result.put("unchanged", unchanged);
+        result.put("compared_file_count", previous.size());
+        return java.util.Collections.unmodifiableMap(new TreeMap<>(result));
+    }
+
+    private ParentProfile readParentProfile(
+            Path output, String projectId, String programId) throws Exception {
+        if (!Files.exists(output, LinkOption.NOFOLLOW_LINKS)) return null;
+        if (!Files.isRegularFile(output, LinkOption.NOFOLLOW_LINKS) || Files.isSymbolicLink(output)) {
+            throw new IllegalStateException("PARENT_PROGRAM_PROFILE_FILE_INVALID");
+        }
+        JsonNode node = mapper.readTree(output.toFile());
+        if (!CONTRACT.equals(node.path("contract").asText())) {
+            throw new IllegalStateException("PARENT_PROGRAM_PROFILE_CONTRACT_INVALID");
+        }
+        if (!projectId.equals(node.path("project_id").asText())
+                || !programId.equals(node.path("program_id").asText())) {
+            throw new IllegalStateException("PARENT_PROGRAM_PROFILE_IDENTITY_MISMATCH");
+        }
+        String declaredHash = node.path("profile_sha256").asText();
+        ObjectNode hashBody = ((ObjectNode) node.deepCopy());
+        hashBody.remove("profile_sha256");
+        if (!declaredHash.matches("[0-9a-f]{64}")
+                || !declaredHash.equals(sha256(mapper.writeValueAsBytes(hashBody)))) {
+            throw new IllegalStateException("PARENT_PROGRAM_PROFILE_HASH_INVALID");
+        }
+        int revision = node.path("revision").asInt(0);
+        if (revision < 1) throw new IllegalStateException("PARENT_PROGRAM_PROFILE_REVISION_INVALID");
+        JsonNode baseline = node.path("source_baseline");
+        String treeHash = baseline.path("source_tree_sha256").asText();
+        if (!treeHash.matches("[0-9a-f]{64}")) {
+            throw new IllegalStateException("PARENT_PROGRAM_PROFILE_SOURCE_HASH_INVALID");
+        }
+        List<Map<String, Object>> inventoryValues = new ArrayList<>();
+        if (!node.path("source_inventory").isArray()) {
+            throw new IllegalStateException("PARENT_PROGRAM_PROFILE_INVENTORY_MISSING");
+        }
+        for (JsonNode item : node.path("source_inventory")) {
+            inventoryValues.add(Map.of(
+                    "path", item.path("path").asText(),
+                    "sha256", item.path("sha256").asText()));
+        }
+        Map<String, String> inventory = inventoryIndex(
+                inventoryValues, "PARENT_PROGRAM_PROFILE_INVENTORY_INVALID");
+        Map<String, Object> reference = Map.of(
+                "profile_id", node.path("profile_id").asText(),
+                "profile_sha256", declaredHash,
+                "source_tree_sha256", treeHash,
+                "revision", revision);
+        return new ParentProfile(revision, inventory, reference);
+    }
+
+    private static Map<String, String> inventoryIndex(
+            List<Map<String, Object>> inventory, String error) {
+        Map<String, String> result = new TreeMap<>();
+        for (Map<String, Object> item : inventory) {
+            String path = String.valueOf(item.get("path"));
+            String hash = String.valueOf(item.get("sha256"));
+            if (path.isBlank() || path.startsWith("/") || path.contains("..") || path.contains("\\")
+                    || !hash.matches("[0-9a-f]{64}") || result.put(path, hash) != null) {
+                throw new IllegalStateException(error);
+            }
+        }
+        return java.util.Collections.unmodifiableMap(new TreeMap<>(result));
     }
 
     private Map<String, Object> sourceBaseline(Path root, String treeDigest, int fileCount) throws Exception {
@@ -299,4 +412,6 @@ public final class ProgramLearningService {
 
     private record GitBaseline(String commit, boolean clean) {}
     private record CommandResult(int exitCode, String output, boolean outputTruncated) {}
+    private record ParentProfile(
+            int revision, Map<String, String> inventory, Map<String, Object> reference) {}
 }
